--- a/client/src/styles/Home.module.css
+++ b/client/src/styles/Home.module.css
@@ -1,8 +1,15 @@
 .main {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
 	align-items: center;
-	padding: 6rem;
 	height: 100vh;
+	gap: 2rem;
+	padding: 6rem;
+}
+
+.players {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 1rem;
 }
